# ai_referat

./: .gitignore  note.txt  note1.md  note2.md  pyproject.toml  requirements.txt
ai_referat/: client.py  client_g4f.py  client_v2.py  config.py  docx_writer.py  json_writer.py  models.py  parser.py  pipeline.py  pipeline_g4f.py  prompts.py  rules.py
examples/: example_create_docx.py  example_main_async.py  example_main_g4f_async.py  example_main_g4f_sync.py  example_main_sync.py
results/docx/: ref.docx  referat_История HTML.docx
results/json/: referat_История HTML.json
src/ai_referat/: __init__.py  client.py  json_writer.py  models.py  parser.py  prompts.py  rules.py
src/ai_referat.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
